feat(filtration): add pagination to summary endpoint
