# internal/adapters/http/dto/dto.go
@@ -1,7 +1,9 @@
 package dto
 
 import (
+	"errors"
 	"fmt"
+	"strconv"
 	"submanager/internal/domain"
 	"time"
 
@@ -54,6 +56,8 @@ type SummaryQueries struct {
 	End         time.Time
 	ServiceName string
 	UserID      string
+	PageNumber  int
+	PageSize    int
 }
 
 // GetSummaryQuery extracts summary query parameters from the request context.
@@ -87,6 +91,35 @@ func GetSummaryQuery(ctx *gin.Context) (SummaryQueries, error) {
 
 	sumQuery.UserID, _ = ctx.GetQuery("user_ID")
 	sumQuery.ServiceName, _ = ctx.GetQuery("service_name")
-
+	// Использование:
+	sumQuery.PageNumber, sumQuery.PageSize, err = GetPaginationArgs(ctx)
+	if err != nil {
+		return sumQuery, err
+	}
 	return sumQuery, nil
+}
+
+func GetPaginationArgs(ctx *gin.Context) (int, int, error) {
+	pageNumberStr := ctx.DefaultQuery("page_number", "1") // по умолчанию 1
+	pageSizeStr := ctx.DefaultQuery("page_size", "10")    // по умолчанию 10
+
+	pageNumber, err := strconv.Atoi(pageNumberStr)
+	if err != nil {
+		return 0, 0, errors.New("page_number must be integer")
+	}
+
+	pageSize, err := strconv.Atoi(pageSizeStr)
+	if err != nil {
+		return 0, 0, errors.New("page_size must be integer")
+	}
+
+	if pageNumber < 1 {
+		return 0, 0, errors.New("page_number must be greater than 0")
+	}
+
+	if pageSize < 1 || pageSize > 100 {
+		return 0, 0, errors.New("page_size must be betqeen 1 and 100")
+	}
+
+	return pageNumber, pageSize, nil
 }
